PLV-6666 | testeDeploy.cls | teste

--- a/force-app/main/default/classes/testeDeploy.cls
+++ b/force-app/main/default/classes/testeDeploy.cls
@@ -1,23 +1,16 @@
 public with sharing class testeDeploy {
     public testeDeploy() {
         /*
-<<<<<<< HEAD
-=======
             teste1
->>>>>>> d2a9d374e10ce137ad73b6a7a67efd9095376305
+
+            teste 5
         
             teste2
         
 
             teste5
-<<<<<<< HEAD
 
             teste6
         */
     }
 }
-=======
-        */
-    }
-}
->>>>>>> d2a9d374e10ce137ad73b6a7a67efd9095376305
