PLV-6666 | testeDeploy.cls | teste

--- a/force-app/main/default/classes/testeDeploy.cls
+++ b/force-app/main/default/classes/testeDeploy.cls
@@ -1,7 +1,7 @@
 public with sharing class testeDeploy {
     public testeDeploy() {
         /*
-            teste1
+            teste1 - 2
 
             teste 5
         
