PLV-6666 | testeDeploy.cls | teste

--- a/force-app/main/default/classes/testeDeploy.cls
+++ b/force-app/main/default/classes/testeDeploy.cls
@@ -1,20 +1,16 @@
 public with sharing class testeDeploy {
     public testeDeploy() {
         /*
-<<<<<<< HEAD
-            teste1 
-=======
             teste1
 
             teste 5
->>>>>>> d987890a7f9295fe15fc75ee123cba309f180d12
         
             teste2
         
 
             teste5
 
-            teste6
+            teste6 - 2
 
 
 
