--- a/force-app/main/default/classes/testeDeploy.cls
+++ b/force-app/main/default/classes/testeDeploy.cls
@@ -14,7 +14,7 @@ public with sharing class testeDeploy {
 
 
             teasjd - 2
-            teste - come 4 5
+            teste 
             teste
 
 
