PLV-6666 | testeDeploy.cls | teste

--- a/force-app/main/default/classes/testeDeploy.cls
+++ b/force-app/main/default/classes/testeDeploy.cls
@@ -10,7 +10,7 @@ public with sharing class testeDeploy {
 
             teste5
 
-            teste6 - 2
+            teste6 - 2 asjdojasd
 
 
             teasjd - 2
